# Release_Recollection_Cardinal

./: .gitignore  CLAUDE.md  Colab_へようこそ.ipynb  LICENSE  README.md  build.yaml  keymap.yaml  keymap_drawer.yaml  package.json
.claude/: launch.json  settings.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy-editor.yml  draw-keymap.yml  release.yml  tauri-build.yml
config/: Cardinal.keymap  Recollection.keymap  Release_Recollection.keymap  west.yml
config/boards/shields/Cardinal/: Cardinal.dtsi  Cardinal.zmk.yml  Dark_Repulser.conf  Dark_Repulser.overlay  Elucidator.conf  Elucidator.overlay
config/boards/shields/Recollection/: Elucidator.overlay
config/boards/shields/Release_Recollection/: Dark_Repulser.conf  Dark_Repulser.overlay  Elucidator.conf  Elucidator.overlay  Release_Recollection.zmk.yml
config/keymap/: 00_prelude.dtsi  10_combos.dtsi  20_macros.dtsi  30_behaviors_base.dtsi  30_enhance_armament_base.dtsi  31_enhance_armament_layers.dtsi  35_enhance_armament.dtsi
config/keymap/layers/: 00_default.dtsi  01_function.dtsi  02_arrow_sign.dtsi  02_sign.dtsi  03_num.dtsi  04_mouse.dtsi  05_scroll.dtsi  06_bluetooth.dtsi  15_snipe.dtsi  16_num_smart.dtsi
editor/: app.js  index.html  live.html  live.js  style.css
scripts/: cardinal_editor_server.py  install_launchd.sh  keymap_preview_server.py  reorder_keymap.py  uninstall_launchd.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ble.rs  lib.rs  main.rs
zephyr/: module.yml
