[package]
name = "cardinal-editor"
version = "0.1.0"
description = "Cardinal Editor — Release Recollection 記憶書換術式 (Tauri デスクトップ版)"
authors = ["cardinal-sys"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "cardinal_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
