[package]
name = "cardinal-editor"
version = "0.1.0"
description = "Cardinal Editor — Release Recollection 記憶書換術式 (Tauri デスクトップ版)"
authors = ["cardinal-sys"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "cardinal_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bluest = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = "1"
log = "0.4"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
